--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -44,6 +44,7 @@
 
     .main{
       overflow-y: scroll;
+      overflow-x: hidden;
       height: 100%;
       padding: 10px;
 
