--- a/src/sass/pages/_login.scss
+++ b/src/sass/pages/_login.scss
@@ -43,7 +43,7 @@
     &-panel{
       padding: 10px;
 
-      //overflow: hidden;
+      overflow: hidden;
       display: flex;
       align-items: center;
       justify-content: center;
